# actix-easy-multipart

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
actix-easy-multipart/: Cargo.toml
actix-easy-multipart-derive/: Cargo.toml
actix-easy-multipart-derive/src/: lib.rs
actix-easy-multipart/src/: bytes.rs  deserialize.rs  extractor.rs  json.rs  lib.rs  load.rs  tempfile.rs  text.rs  validated.rs
derive-tests/: Cargo.toml
derive-tests/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
