[package]
name = "actix-easy-multipart-derive"
version = "0.2.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/actix-easy-multipart"
homepage = "https://github.com/jacob-pro/actix-easy-multipart"
license = "LGPL-3.0"
description = "actix-easy-multipart proc-macro"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "1.0.92"
