[package]
name = "actix-easy-multipart"
version = "1.0.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/actix-easy-multipart"
homepage = "https://github.com/jacob-pro/actix-easy-multipart"
license = "LGPL-3.0"
description = "Easy to use Multipart Forms for Actix-web"
readme = "../README.md"

[dependencies]
actix-easy-multipart-derive = { version = "0.1.0", optional = true, path = "../actix-easy-multipart-derive" }
actix-multipart = "0.3"
actix-web = { version = "3", default-features = false }
futures = "0.3.1"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
tempfile = "3.1.0"
thiserror = "1.0.30"
tokio = { version = "0.2", features = ["fs"] }
validator = { version = "0.12", optional = true }

[dev-dependencies]
actix-easy-multipart-derive = { version = "0.1.0", optional = false, path = "../actix-easy-multipart-derive" }
actix-multipart-rfc7578 = "0.4"
actix-rt = "1"
awc = "2"
validator_derive = "0.10.1"

[features]
derive = ["actix-easy-multipart-derive"]
default = ["derive"]
