[package]
name = "actix-easy-multipart"
version = "2.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
repository = "https://github.com/jacob-pro/actix-easy-multipart"
homepage = "https://github.com/jacob-pro/actix-easy-multipart"
license = "LGPL-3.0"
description = "Easy to use Multipart Forms for Actix-web"
readme = "../README.md"

[dependencies]
actix-easy-multipart-derive = { version = "0.2.0", optional = true, path = "../actix-easy-multipart-derive" }
actix-multipart = "0.4.0"
actix-web = { version = "4.0.0", default-features = false }
futures = "0.3.1"
mime = "0.3.16"
multimap = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.6.1"
tempfile = "3.1.0"
thiserror = "1.0.30"
tokio = { version = "1", features = ["fs"] }
validator = { version = "0.14", optional = true }

[dev-dependencies]
actix-easy-multipart-derive = { version = "0.2.0", path = "../actix-easy-multipart-derive" }
actix-rt = "2"
actix-test = "0.1.0-beta.13"
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }
validator = { version = "0.14", features = ["derive"] }

[features]
derive = ["actix-easy-multipart-derive"]
default = ["derive"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
