[package]
name = "actix-easy-multipart"
version = "3.0.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2021"
repository = "https://github.com/jacob-pro/actix-easy-multipart"
homepage = "https://github.com/jacob-pro/actix-easy-multipart"
license = "LGPL-3.0"
description = "Typed multipart form extractor for actix-web"
readme = "../README.md"

[dependencies]
actix-easy-multipart-derive = { version = "3.0.0", path = "../actix-easy-multipart-derive" }
actix-http = "3"
actix-multipart = "0.4.0"
actix-web = { version = "4", default-features = false }
bytes = "1"
derive_more = "0.99.17"
futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.7", default-features = false }
mime = "0.3"
serde = "1"
serde_json = "1"
serde_plain = "1"
tempfile = { package = "tempfile", version = "3.3.0", optional = true }
tokio = { version = "1", default-features = false, optional = true }

[dev-dependencies]
actix-multipart-rfc7578 = "0.10.0"
actix-rt = "2.2"
actix-test = "0.1.0"
awc = "3.0.1"

[features]
default = ["tempfile"]
tempfile = ["dep:tempfile", "tokio/fs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
